--- a/index.html
+++ b/index.html
@@ -5,15 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Chúc Mừng Năm Mới Bính Ngọ</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Be+Vietnam+Pro:wght@400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Be+Vietnam+Pro&display=swap" rel="stylesheet">
 
 <style>
-/* ===== RESET ===== */
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-}
+*{margin:0;padding:0;box-sizing:border-box}
 
 body{
   min-height:100vh;
@@ -21,55 +16,46 @@ body{
   justify-content:center;
   align-items:center;
   background:#fbf3df;
-  overflow:hidden;
-  font-family:'Be Vietnam Pro', sans-serif;
+  font-family:'Be Vietnam Pro',sans-serif;
 }
 
-/* ===== PHONG BÌ ===== */
-.envelope-wrap{
-  text-align:center;
-  z-index:10;
-}
+/* ================= PHONG BÌ ================= */
+.wrapper{text-align:center}
 
 .envelope{
   position:relative;
   width:280px;
-  height:200px; /* đủ không gian cho nắp */
+  height:160px;
   margin:auto;
 }
 
-/* THÂN PHONG BÌ – MỐC CHUẨN */
+/* THÂN */
 .env-body{
   position:absolute;
   bottom:0;
   width:100%;
-  height:120px;
+  height:100px;
   background:#d32f2f;
   border-radius:0 0 16px 16px;
-  box-shadow:0 14px 35px rgba(0,0,0,.28);
-  z-index:2;
+  box-shadow:0 14px 30px rgba(0,0,0,.25);
+  z-index:1;
 }
 
-/* NẮP PHONG BÌ – CĂN PIXEL CHUẨN */
+/* NẮP – CLIP-PATH CHUẨN PIXEL */
 .env-flap{
   position:absolute;
-
-  /* 👇 ĐẶT ĐÚNG MÉP TRÊN CỦA THÂN */
-  bottom:120px;
-
+  top:0;
   left:0;
-  width:0;
-  height:0;
+  width:100%;
+  height:60px;
+  background:#c62828;
 
   /* 👇 TAM GIÁC CÂN TUYỆT ĐỐI */
-  border-left:140px solid transparent;
-  border-right:140px solid transparent;
-  border-bottom:80px solid #c62828;
+  clip-path:polygon(0 0,50% 100%,100% 0);
 
-  transform-origin:bottom center;
-  transform:rotateX(0deg);
+  transform-origin:top center;
   transition:transform .9s ease;
-  z-index:3;
+  z-index:2;
 }
 
 /* MỞ NẮP */
@@ -78,54 +64,50 @@ body{
 }
 
 /* NÚT */
-.open-btn{
-  margin-top:22px;
-  padding:11px 28px;
+button{
+  margin-top:20px;
+  padding:12px 28px;
   border:none;
   border-radius:30px;
   background:#d32f2f;
-  color:white;
+  color:#fff;
   font-size:16px;
   cursor:pointer;
 }
 
-/* ===== THIỆP ===== */
+/* ================= THIỆP ================= */
 .card{
   position:fixed;
   inset:0;
   display:none;
   justify-content:center;
   align-items:center;
-  background:url('tet-bg.png') center/contain no-repeat;
-  background-color:#b71c1c;
+  background:url('tet-bg.png') center/cover no-repeat;
 }
 
-.card.show{
-  display:flex;
-}
+.card.show{display:flex}
 
 .card::after{
   content:'';
   position:absolute;
   inset:0;
-  background:rgba(0,0,0,.15);
+  background:rgba(0,0,0,.18);
 }
 
-/* KHUNG CÂU CHÚC – SÁNG RÕ */
-.card-content{
+.content{
   position:relative;
   max-width:720px;
   margin:20px;
-  background:rgba(255,253,245,.98);
-  padding:32px 28px;
+  background:rgba(255,253,245,.97);
+  padding:34px;
   border-radius:20px;
   text-align:center;
-  box-shadow:0 18px 45px rgba(0,0,0,.3);
+  box-shadow:0 20px 45px rgba(0,0,0,.35);
   z-index:2;
 }
 
 h1{
-  font-family:'Great Vibes', cursive;
+  font-family:'Great Vibes',cursive;
   font-size:44px;
   color:#b71c1c;
   margin-bottom:16px;
@@ -137,7 +119,7 @@ p{
   color:#5d4037;
 }
 
-/* ===== PHÁO HOA ===== */
+/* ================= PHÁO HOA ================= */
 canvas{
   position:fixed;
   inset:0;
@@ -145,34 +127,28 @@ canvas{
   z-index:1;
 }
 
-/* ===== MOBILE ===== */
+/* MOBILE */
 @media(max-width:600px){
-  .envelope{width:240px;height:190px;}
-  .env-flap{
-    border-left:120px solid transparent;
-    border-right:120px solid transparent;
-    border-bottom:70px solid #c62828;
-    bottom:120px;
-  }
-  h1{font-size:34px;}
-  p{font-size:15px;}
+  .envelope{width:240px}
+  h1{font-size:34px}
+  p{font-size:15px}
 }
 </style>
 </head>
 
 <body>
 
-<div class="envelope-wrap" id="wrap">
+<div class="wrapper" id="wrap">
   <div class="envelope" id="env">
     <div class="env-flap"></div>
     <div class="env-body"></div>
   </div>
-  <button class="open-btn" id="btn">Mở Thiệp</button>
+  <button id="openBtn">Mở Thiệp</button>
 </div>
 
 <div class="card" id="card">
   <canvas id="fw"></canvas>
-  <div class="card-content">
+  <div class="content">
     <h1>Chúc Mừng Năm Mới Bính Ngọ</h1>
     <p id="wish"></p>
   </div>
@@ -181,21 +157,20 @@ canvas{
 <audio id="music" src="music.mp3" loop></audio>
 
 <script>
-/* ===== LỜI CHÚC ===== */
+/* LỜI CHÚC */
 const wishes=[
-"Chúc năm mới tràn đầy năng lượng tích cực, học tập tiến bộ từng ngày, tinh thần luôn lạc quan và vững bước trên con đường tương lai phía trước.",
-"Xuân về mang theo niềm vui mới, chúc bạn mạnh khỏe, học tập thật tốt, gặp nhiều may mắn và luôn giữ vững ước mơ của mình."
+"Chúc năm mới sức khỏe dồi dào, học tập tiến bộ, tinh thần lạc quan và luôn vững bước trên con đường phía trước.",
+"Xuân sang mang theo niềm vui mới, chúc bạn gặp nhiều may mắn, thành công và luôn giữ được đam mê của mình."
 ];
 document.getElementById("wish").innerText=
 wishes[Math.floor(Math.random()*wishes.length)];
 
-/* ===== MỞ THIỆP ===== */
-const btn=document.getElementById("btn");
+/* MỞ THIỆP */
 const env=document.getElementById("env");
 const card=document.getElementById("card");
 const music=document.getElementById("music");
 
-btn.onclick=()=>{
+document.getElementById("openBtn").onclick=()=>{
   env.classList.add("open");
 
   setTimeout(()=>{
@@ -210,53 +185,44 @@ btn.onclick=()=>{
       music.volume=v+=0.02;
     },120);
 
-    startFireworks();
+    fireworks();
   },900);
 };
 
-/* ===== PHÁO HOA TIA ===== */
+/* PHÁO HOA */
 const canvas=document.getElementById("fw");
 const ctx=canvas.getContext("2d");
+canvas.width=innerWidth;
+canvas.height=innerHeight;
+onresize=()=>{canvas.width=innerWidth;canvas.height=innerHeight};
 
-function resize(){
-  canvas.width=innerWidth;
-  canvas.height=innerHeight;
-}
-resize();
-onresize=resize;
-
-let particles=[];
-function fire(){
+let ps=[];
+function boom(){
   const x=Math.random()*canvas.width;
   const y=Math.random()*canvas.height/2;
-  const colors=["#ffeb3b","#ff5722","#ff9800","#e91e63"];
-  for(let i=0;i<90;i++){
-    particles.push({
-      x,y,
-      vx:(Math.random()-0.5)*7,
-      vy:(Math.random()-0.5)*7,
-      life:110,
-      color:colors[Math.floor(Math.random()*colors.length)]
+  const c=["#ffeb3b","#ff5722","#ff9800","#e91e63"];
+  for(let i=0;i<80;i++){
+    ps.push({x,y,
+      vx:(Math.random()-.5)*6,
+      vy:(Math.random()-.5)*6,
+      l:100,
+      c:c[Math.floor(Math.random()*c.length)]
     });
   }
 }
-
-function animate(){
+function draw(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
-  particles.forEach((p,i)=>{
-    p.x+=p.vx;
-    p.y+=p.vy;
-    p.life--;
-    ctx.fillStyle=p.color;
+  ps.forEach((p,i)=>{
+    p.x+=p.vx;p.y+=p.vy;p.l--;
+    ctx.fillStyle=p.c;
     ctx.fillRect(p.x,p.y,2,2);
-    if(p.life<=0) particles.splice(i,1);
+    if(p.l<=0) ps.splice(i,1);
   });
-  requestAnimationFrame(animate);
+  requestAnimationFrame(draw);
 }
-
-function startFireworks(){
-  setInterval(fire,800);
-  animate();
+function fireworks(){
+  setInterval(boom,800);
+  draw();
 }
 </script>
 
