--- a/index.html
+++ b/index.html
@@ -8,131 +8,115 @@
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 
 <style>
+*{box-sizing:border-box}
 body{
   margin:0;
   height:100vh;
-  background:#fbf3e6;
   display:flex;
   justify-content:center;
   align-items:center;
-  font-family:Arial, sans-serif;
-  overflow:hidden;
+  background:#fbf3e6;
+  font-family:Arial,sans-serif;
 }
 
-/* ================= PHONG BÌ ================= */
-.wrapper{text-align:center}
-
-.envelope{
+/* ===== CONTAINER ===== */
+.scene{
+  width:320px;
+  height:260px;
   position:relative;
-  width:280px;
-  height:190px;
-  margin:auto;
 }
 
-/* THÂN */
-.envelope-body{
+/* ===== PHONG BÌ ===== */
+.envelope{
   position:absolute;
   bottom:0;
   width:100%;
-  height:140px;
-  background:#d32f2f;
-  border-radius:0 0 20px 20px;
-  box-shadow:0 12px 25px rgba(0,0,0,.25);
-  z-index:1;
-}
-
-/* NẮP – 2D – KHÍT PIXEL */
-.envelope-flap{
-  position:absolute;
-  top:50px;               /* KHỚP CHÍNH XÁC */
-  left:0;
-  width:100%;
-  height:90px;
-  background:#b71c1c;
-  clip-path:polygon(0 0,50% 100%,100% 0);
-  transform-origin:50% 100%;
-  transition:transform 0.9s ease, top 0.9s ease;
+  height:190px;
   z-index:2;
 }
 
-/* MỞ – KHÔNG BIẾN MẤT */
-.envelope.open .envelope-flap{
-  transform:rotateZ(-180deg);
-  top:-20px;
+/* thân */
+.body{
+  position:absolute;
+  bottom:0;
+  width:100%;
+  height:130px;
+  background:#d32f2f;
+  border-radius:0 0 18px 18px;
+  box-shadow:0 12px 25px rgba(0,0,0,.25);
 }
 
-/* ================= NÚT ================= */
+/* nắp */
+.flap{
+  position:absolute;
+  top:60px;
+  width:100%;
+  height:80px;
+  background:#b71c1c;
+  clip-path:polygon(0 0,50% 100%,100% 0);
+  transform-origin:50% 100%;
+  transition:transform .8s ease;
+}
+
+/* mở */
+.scene.open .flap{
+  transform:rotateZ(-180deg);
+}
+
+/* ===== THIỆP ===== */
+.card{
+  position:absolute;
+  bottom:20px;
+  left:50%;
+  transform:translateX(-50%) translateY(120px);
+  width:90%;
+  background:
+    linear-gradient(rgba(255,255,255,.96),rgba(255,255,255,.96)),
+    url("tet-bg.png") center/cover no-repeat;
+  border-radius:18px;
+  padding:22px;
+  text-align:center;
+  box-shadow:0 20px 40px rgba(0,0,0,.35);
+  transition:transform .9s ease, opacity .6s ease;
+  opacity:0;
+  z-index:1;
+}
+
+.scene.open .card{
+  transform:translateX(-50%) translateY(-120px);
+  opacity:1;
+}
+
+/* ===== TEXT ===== */
+h1{
+  font-family:'Dancing Script',cursive;
+  color:#b71c1c;
+  font-size:34px;
+  margin-bottom:10px;
+}
+
+p{
+  color:#333;
+  line-height:1.6;
+}
+
+/* ===== BUTTON ===== */
 button{
-  margin-top:22px;
+  position:absolute;
+  bottom:-60px;
+  left:50%;
+  transform:translateX(-50%);
   padding:10px 26px;
   border:none;
   border-radius:999px;
   background:#d32f2f;
   color:#fff;
-  font-size:16px;
   cursor:pointer;
 }
 
-/* ================= THIỆP ================= */
-.card{
-  position:fixed;
-  inset:0;
-  display:none;
-  justify-content:center;
-  align-items:center;
-}
-
-.card.show{
-  display:flex;
-  animation:fade 1s ease forwards;
-}
-
-.card-inner{
-  width:90%;
-  max-width:520px;
-  background:
-    linear-gradient(rgba(255,255,255,.95),rgba(255,255,255,.95)),
-    url("tet-bg.png") center/cover no-repeat;
-  padding:28px 24px;
-  border-radius:20px;
-  text-align:center;
-  box-shadow:0 20px 40px rgba(0,0,0,.35);
-}
-
-h1{
-  font-family:'Dancing Script', cursive;
-  font-size:36px;
-  color:#b71c1c;
-}
-
-p{
-  font-size:16px;
-  line-height:1.6;
-  color:#333;
-}
-
-/* ================= PHÁO HOA ================= */
-.firework{
-  position:fixed;
-  width:4px;
-  height:4px;
-  border-radius:50%;
-  animation:boom 1.2s linear infinite;
-}
-
-@keyframes boom{
-  0%{transform:scale(0);opacity:1}
-  100%{transform:scale(14);opacity:0}
-}
-
-@keyframes fade{
-  from{opacity:0}
-  to{opacity:1}
-}
-
-/* MOBILE */
+/* ===== MOBILE ===== */
 @media(max-width:480px){
-  .envelope{width:220px;height:160px}
+  .scene{width:260px}
   h1{font-size:28px}
 }
 </style>
@@ -140,42 +124,22 @@ p{
 
 <body>
 
-<div class="wrapper">
-  <div class="envelope" id="env">
-    <div class="envelope-flap"></div>
-    <div class="envelope-body"></div>
-  </div>
-  <button onclick="openCard()">Mở Thiệp</button>
-</div>
-
-<div class="card" id="card">
-  <div class="card-inner">
+<div class="scene" id="scene">
+  <div class="card">
     <h1>Chúc Mừng Năm Mới Bính Ngọ</h1>
     <p id="wish"></p>
   </div>
-</div>
 
-<audio id="music" src="music.mp3" loop></audio>
-
-<script>
-const wishes=[
-"Chúc năm mới sức khỏe dồi dào, học tập tiến bộ, mọi ước mơ đều thành hiện thực.",
-"Mong năm Bính Ngọ mang đến thật nhiều niềm vui, may mắn và thành công.",
-"Chúc một năm mới an khang, học hành thuận lợi và tràn đầy năng lượng tích cực."
+  <div classbộ",
+"Chúc một năm mới an khang, hạnh phúc và tràn đầy năng lượng tích cực."
 ];
 
 function openCard(){
-  document.getElementById("env").classList.add("open");
-  setTimeout(()=>{
-    document.getElementById("card").classList.add("show");
-    document.getElementById("wish").innerText =
-      wishes[Math.floor(Math.random()*wishes.length)];
-    playMusic();
-    fireworks();
-  },800);
-}
+  const s=document.getElementById("scene");
+  s.classList.add("open");
+  document.getElementById("wish").innerText =
+    wishes[Math.floor(Math.random()*wishes.length)];
 
-function playMusic(){
   const m=document.getElementById("music");
   m.volume=0;
   m.play();
@@ -184,18 +148,6 @@ function playMusic(){
     if(v<1){v+=0.02;m.volume=v}
     else clearInterval(fade);
   },100);
-}
-
-function fireworks(){
-  setInterval(()=>{
-    const f=document.createElement("div");
-    f.className="firework";
-    f.style.left=Math.random()*100+"vw";
-    f.style.top=Math.random()*100+"vh";
-    f.style.background=`hsl(${Math.random()*360},100%,60%)`;
-    document.body.appendChild(f);
-    setTimeout(()=>f.remove(),1200);
-  },250);
 }
 </script>
 
